# Universal-No-Recoil

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: CI.yml
data/: Config.toml
scripts/: CheckCodeFormatting  ClangFormat  UpdateTool.bat
src/: Globals.cpp  Globals.h  Main.cpp
src/core/: Keys.cpp  Keys.h  Logger.h  Random.h  String.cpp  String.h
src/detection/: ButtonDetection.cpp  ButtonDetection.h  OperatorSelection.cpp  WeaponDisplay.cpp
src/drawing/: Drawing.cpp  Drawing.h  OperatorSelection.cpp  WeaponDisplay.cpp
src/files/: Config.cpp  Files.h
src/handlers/: ButtonHandler.cpp  ButtonHandler.h
src/inputs/: Controller.cpp  Inputs.h  Mouse.cpp
src/recoil/: Recoil.cpp  Recoil.h  Structs.h  Threads.cpp
src/resource/: resource.rc
src/ui/: Bitmap.cpp  Font.cpp  Font.h  Themes.cpp  Themes.h
src/ui/widgets/: Button.cpp  Button.h  Slider.cpp  Slider.h  Toolbar.cpp  Toolbar.h
src/utils/: FileUtils.h  LayoutUtils.h  StringUtils.h  WindowUtils.h
website/: package.json
website/src/pages/: index.astro
